--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "debug": "~2.2.0",
     "ejs": "~2.5.2",
     "express": "~4.14.0",
+    "log4js": "^1.0.1",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
     "serve-favicon": "~2.3.0"
