--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "test": "mocha"
   },
   "dependencies": {
     "body-parser": "~1.15.2",
@@ -14,8 +15,10 @@
     "ejs": "~2.5.2",
     "express": "~4.14.0",
     "log4js": "^1.0.1",
+    "mocha": "^3.2.0",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
+    "request": "^2.79.0",
     "serve-favicon": "~2.3.0"
   }
 }
